--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
             <div class="price-container">
                 <div class="tab-text tab-text_first">Выберите желаемый доход и&nbsp;выполняте заказы:</div>
                 <div class="tab__slider">
-                    <input id="slider" type="range" min="1" max="4" step="1" value="1"
-                        style="background: linear-gradient(to right, black 66%, transparent 66%);">
+                    <p class="slider__input slider__input-month">доход в&nbsp;месяц <span id="salary">52&nbsp;000&nbsp;₽</span></p>
+                    <input id="slider" type="range" min="1" max="4" step="1" value="1">
                     <div class="price-group">
-                        <p class="slider__input">доход в&nbsp;месяц <span id="salary">52&nbsp;000&nbsp;₽</span></p>
                         <p class="slider__input slider__input_small">среднее количество дней <span id="days">12</span>
                         </p>
                         <p class="slider__input slider__input_small slider__input_last">количество заказов <span
