added html and css for fix price block

--- a/index.html
+++ b/index.html
@@ -200,18 +200,14 @@
                 <div class="form__container">
                     <p class="form__container-title">Оставить заявку</p>
                     <form action="">
-                        <input type="text" placeholder="ФИО">
-                        <input type="number" placeholder="Дата рождения">
-                        <input type="tel" placeholder="Телефон">
+                        <input class="form__text" type="text" placeholder="ФИО">
+                        <input class="form__text" type="number" placeholder="Дата рождения">
+                        <input class="form__text" type="tel" placeholder="Телефон">
                         <button class="form-btn">Отправить</button>
                     </form>
                 </div>
-                <div class="form__bg">
-                    <img class="form-logo" src="./images/deli-logo.png" alt="deli-logo">
-                    <img class="form-logo" src="./images/ya-go-logo.png" alt="ya-go-logo">
-                    <img class="form-logo" src="./images/ya-eda-logo.png" alt="ya-eda-logo">
-                    <p>Работа курьером
-                        в сервисах Яндекс</p>
+                <div class="form__image">
+                    <img class="form-logo" src="./images/iphone.png" alt="deli-logo">
                 </div>
             </div>
         </section>
