--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
             <!-- <button class="header__btn">Свяжитесь с нами</button> -->
             <div id="mob-menu" class="mob-menu">
                 <button class="header__btn">Свяжитесь с нами</button>
-                <div class="section-burger-menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
             </div>
             <div id="modal_menu__wrapper" class="modal_menu__wrapper">
                 <div id="modal_menu" class="form-group modal_menu__container">
                     <div id="close">&times;</div>
                     <div class="form__container">
                         <p class="form__container-title form__container-title_padding">Позвоните нам</p>
+                        <div class="footer-phone__group modal-group">
+                            <a href="#"><img class="footer-phone__group-img" src="./images/phone-icon.png" alt="icon"></a>
+                            <a class="footer-phone__group-text phone__group-modal" href="tel:+79990000000">+7 (999) 000-00-00</a>
+                        </div>
                         <p class="form__container-title padding">или закажите звонок</p>
                         <form action="">
                             <input class="form__text" type="text" placeholder="ФИО">
@@ -264,8 +263,8 @@
                 <p class="footer-text">Официальный партнер Яндекс</p>
             </div>
             <div class="footer-phone__group">
-                <img class="footer-phone__group-img" src="./images/phone-icon.png" alt="icon">
-                <p class="footer-phone__group-text">+7 (999) 000-00-00</p>
+                <a href=""><img class="footer-phone__group-img" src="./images/phone-icon.png" alt="icon"></a>
+                <a class="footer-phone__group-text" href="tel:+79990000000">+7 (999) 000-00-00</a>
             </div>
         </footer>
     </div>
