--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="modal_menu__wrapper" class="modal_menu__wrapper">
                 <div id="modal_menu" class="form-group modal_menu__container">
                     <div id="close">&times;</div>
-                    <div class="form__container">
+                    <div class="form__container form__container-mob">
                         <p class="form__container-title form__container-title_padding">Позвоните нам</p>
                         <div class="footer-phone__group modal-group">
                             <a href="#"><img class="footer-phone__group-img" src="./images/phone-icon.png" alt="icon"></a>
