replaced social icons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <div class="form__container form__container-mob">
                         <p class="form__container-title form__container-title_padding">Позвоните нам</p>
                         <div class="footer-phone__group modal-group">
-                            <a href="#"><img class="footer-phone__group-img" src="./images/phone-icon.png" alt="icon"></a>
+                            <a href="#"><img class="footer-phone__group-img" src="./images/watsapp-icon-black.png" alt="icon"></a>
+                            <a href="#"><img class="footer-phone__group-img" src="./images/telegram-icon-black.png" alt="icon"></a>
                             <a class="footer-phone__group-text phone__group-modal" href="tel:+79990000000">+7 (999) 000-00-00</a>
                         </div>
                         <p class="form__container-title padding">или закажите звонок</p>
@@ -263,7 +264,8 @@
                 <p class="footer-text">Официальный партнер Яндекс</p>
             </div>
             <div class="footer-phone__group">
-                <a href=""><img class="footer-phone__group-img" src="./images/phone-icon.png" alt="icon"></a>
+                <a href=""><img class="footer-phone__group-img" src="./images/watsapp-white-icon.png" alt="icon"></a>
+                <a href=""><img class="footer-phone__group-img" src="./images/telegram-white-icon.png" alt="icon"></a>
                 <a class="footer-phone__group-text" href="tel:+79990000000">+7 (999) 000-00-00</a>
             </div>
         </footer>
