added phone version

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <p class="form__container-title form__container-title_padding">Позвоните нам</p>
                         <div class="footer-phone__group modal-group">
                             <a href="#"><img class="footer-phone__group-img" src="./images/watsapp-icon-black.png" alt="icon"></a>
-                            <a href="#"><img class="footer-phone__group-img" src="./images/telegram-icon-black.png" alt="icon"></a>
+                            <a href="#"><img class="footer-phone__group-img" src="./images/telegram-icon-black 1.png" alt="icon"></a>
                             <a class="footer-phone__group-text phone__group-modal" href="tel:+79990000000">+7 (999) 000-00-00</a>
                         </div>
                         <p class="form__container-title padding">или закажите звонок</p>
@@ -259,7 +259,7 @@
                 <div class="header__logo">
                     <p class="footer__logo-text">Работа курьером в Яндекс</p>
                     <img class="header__logo-ya" src="./images/logo-footer-ya.png" alt="Логотип яндекс">
-                    <img class="header__logo-img" src="./images/delivery-logo.png" alt="Логотип деливери">
+                    <img class="header__logo-img" src="./images/delivery-white-logo.png" alt="Логотип деливери">
                 </div>
                 <p class="footer-text">Официальный партнер Яндекс</p>
             </div>
