edited mob ver header and images grid

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
     <header class="header">
         <div class="header__logo">
             <p class="header__logo-text">Работа курьером в Яндекс</p>
-            <img class="header__logo-ya" src="./images/ya-logo.png" alt="Логотип яндекс">
-            <img class="header__logo-img" src="./images/delivery-logo.png" alt="Логотип деливери">
+            <div class="header__logo-images">
+                <img class="header__logo-ya" src="./images/ya-logo.png" alt="Логотип яндекс">
+                <img class="header__logo-img" src="./images/delivery-logo.png" alt="Логотип деливери">
+            </div>
         </div>
         <div>
             <!-- <button class="header__btn">Свяжитесь с нами</button> -->
             <div id="mob-menu" class="mob-menu">
                 <button class="header__btn">Свяжитесь с нами</button>
+                <img class="header__btn-img" src="./images/call-img.png" alt="">
             </div>
             <div id="modal_menu__wrapper" class="modal_menu__wrapper">
                 <div id="modal_menu" class="form-group modal_menu__container">
@@ -31,9 +34,12 @@
                     <div class="form__container form__container-mob">
                         <p class="form__container-title form__container-title_padding">Позвоните нам</p>
                         <div class="footer-phone__group modal-group">
-                            <a href="#"><img class="footer-phone__group-img" src="./images/watsapp-icon-black.png" alt="icon"></a>
-                            <a href="#"><img class="footer-phone__group-img" src="./images/telegram-icon-black 1.png" alt="icon"></a>
-                            <a class="footer-phone__group-text phone__group-modal" href="tel:+79990000000">+7 (999) 000-00-00</a>
+                            <a href="#"><img class="footer-phone__group-img" src="./images/watsapp-icon-black.png"
+                                    alt="icon"></a>
+                            <a href="#"><img class="footer-phone__group-img" src="./images/telegram-icon-black 1.png"
+                                    alt="icon"></a>
+                            <a class="footer-phone__group-text phone__group-modal" href="tel:+79990000000">+7 (999)
+                                000-00-00</a>
                         </div>
                         <p class="form__container-title padding">или закажите звонок</p>
                         <form action="">
@@ -79,28 +85,28 @@
             <section class="advantages">
                 <h2 class="advantages-header">Преимущества работы</h2>
                 <div class="advantages__cards">
-                    <div class="advantages__card">
+                    <div class="advantages__card advantages__card1">
                         <img class="advantages__card-img" src="./images/card-icon1.png" alt="icon">
                         <p class="advantages__card-text">Вы сами выбираете время работы</p>
                     </div>
-                    <div class="advantages__card">
+                    <div class="advantages__card advantages__card2">
                         <img class="advantages__card-img" src="./images/card-icon2.png" alt="icon">
                         <p class="advantages__card-text">Доставляйте на удобном вам транспорте или пешком</p>
                     </div>
-                    <div class="advantages__card">
+                    <div class="advantages__card advantages__card3">
                         <img class="advantages__card-img" src="./images/card-icon3.png" alt="icon">
                         <p class="advantages__card-text">Дополнительный доход
                             за счет чаевых и новичков</p>
                     </div>
-                    <div class="advantages__card">
+                    <div class="advantages__card advantages__card4">
                         <img class="advantages__card-img" src="./images/card-icon4.png" alt="icon">
                         <p class="advantages__card-text">Еженедельные/ежедневные выплаты</p>
                     </div>
-                    <div class="advantages__card">
+                    <div class="advantages__card advantages__card5">
                         <img class="advantages__card-img" src="./images/card-icon5.png" alt="icon">
                         <p class="advantages__card-text">Работа в вашем районе</p>
                     </div>
-                    <div class="advantages__card">
+                    <div class="advantages__card advantages__card6">
                         <img class="advantages__card-img" src="./images/card-icon6.png" alt="icon">
                         <p class="advantages__card-text">Выдаем одежду и термокороб бесплатно</p>
                     </div>
