--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Яндекс Работа</title>
+    <meta name="og:title" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
+  <meta name="og:type" content="article">
+  <meta name="og:url" content="https://website.ru">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+  <meta property="og:title" content="Работа курьером в сервисе доставок от Яндекс и Delivery Club">
+  <meta property="og:description" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
+  <meta name="og:description" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
+  <meta name="keywords"
+    content="Яндрекс, Деливери, Delivery Club, работа курьером, курьер, пеший курьер, доставка, еды, еда" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script defer src="./script.js"></script>
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
